<resources>
    <string name="app_name" translatable="false">Market</string>
    <string name="title_event_detail">Product Details</string>
    <string name="add">Add</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_price">Product price</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_status">Product status</string>
    <string name="name">Name</string>
    <string name="client">Client</string>
    <string name="clerk">Clerk</string>

</resources>
