<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.market.NewProduct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/name" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price" />

    <EditText
        android:id="@+id/productStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_status" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>